--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -37,3 +37,24 @@ body[data-layout-mode=horizontal] .footer {
 }
 
 .pagination { justify-content: end; }
+
+.screen-lock {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    z-index: 1000000;
+    opacity: .7;
+}
+.screen-lock-text {
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    top: 49%;
+    z-index: 1000001;
+    left: 0px;
+    color: white;
+    font-size: 28px;
+}
