--- a/public/assets/css/game.css
+++ b/public/assets/css/game.css
@@ -1,184 +1,1 @@
-:root {
-	--app-max-width: 1400px;
-}
-
-.content-page {
-    margin-top: 0px;
-    overflow: initial !important;
-}
-
-#wrapper { overflow: initial!important; }
-.content-page > .content { margin-top: 15px; }
-.content-page > .content.with-user { margin-top: 70px; }
-
-.user-houses-stats {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 150px;
-}
-
-.navbar-custom { top: 0 }
-
-body #wrapper {
-	max-width: var(--app-max-width);
-	box-shadow: none;
-	margin: 0 auto;
-}
-body[data-layout-mode=horizontal] .navbar-custom,
-body[data-layout-mode=horizontal] .topnav,
-body[data-layout-mode=horizontal] .footer {
-	max-width: 100%;
-}
-
-@media (min-width: 1200px) {
-	body[data-layout-mode=horizontal] .container-fluid {
-		max-width: var(--app-max-width);
-    	margin: 0 auto;
-	}
-}
-
-.paginator-start .pagination { justify-content: start; }
-.paginator-center .pagination { justify-content: center; }
-.paginator-end .pagination { justify-content: end; }
-
-.screen-lock {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background-color: #333;
-    z-index: 1000000;
-    opacity: .7;
-}
-.screen-lock-text {
-    position: fixed;
-    width: 100%;
-    text-align: center;
-    top: 49%;
-    z-index: 1000001;
-    left: 0px;
-    color: white;
-    font-size: 28px;
-}
-
-.bg-sky {
-	background: #4B79A1;												/* fallback for old browsers */	  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to top, #283E51, #0A2342);			  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	background: -olinear-gradient(to top, #283E51, #0A2342);
-}
-.bg-sky::before {
-	content: '';
-	background: url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat center center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	display: block;
-}
-
-.star-on {
-	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
-	-webkit-animation-name: starAnimation;
-	        animation-name: starAnimation;
-	-webkit-animation-duration: 1s;
-	        animation-duration: 1s;
-	filter: drop-shadow(0px 0px 0px yellow);
-}
-
-@-webkit-keyframes starAnimation {
-	from { color: #6c757d; filter: drop-shadow(0px 0px 0px yellow); }
-	to { color: gold; filter: drop-shadow(0px 0px 5px yellow); }
-}
-
-@keyframes starAnimation {
-	from { color: #6c757d; filter: drop-shadow(0px 0px 0px yellow); }
-	to { color: gold; filter: drop-shadow(0px 0px 5px yellow); }
-}
-
-.stars-content {
-	position: absolute;
-	top: 10px;
-	width: 290px;
-	height: 110px;
-}
-.stars-content .star-1 {
-	position: absolute;
-	left: 19px;
-	top: 45px;
-	font-size: 40px;
-}
-.stars-content .star-2 {
-	position: absolute;
-	left: 112px;
-	top: 5px;
-	font-size: 60px;
-}
-.stars-content .star-3 {
-	position: absolute;
-	left: 231px;
-	top: 45px;
-	font-size: 40px;
-}
-
-.buyHouse-name {
-	position: absolute;
-	left: 0;
-	bottom: 0px;
-	padding: 0.5rem;
-	font-size: 2rem;
-	background: rgb(0 0 0 / 89%);
-	box-sizing: border-box;
-	width: 100%;
-	color: white;
-	text-align: center;
-	z-index: 11;
-}
-
-#myModal .card-body,
-#myModal .modal-body {
-	padding: 0px;
-}
-#buyHouse-image {
-	margin-top: 100px;
-}
-
-[v-cloak] {
-	display: none;
-}
-
-.btn-close {
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	z-index: 100;
-	filter: invert(1);
-}
-
-.product-box {
-	transition: opacity 1s ease-in-out;
-	opacity: 1;
-}
-
-.building-hidden {
-	opacity: 0;
-}
-
-
-#myModal .modal-content {
-	box-shadow: rgba(0, 0, 0, .56) 0px 22px 70px 4px;
-}
-#myModal .modal-content,
-#myModal .bg-sky {
-	border-radius: 10px;
-	background-color: transparent;
-}
-#myModal #buyHouse-name {
-	border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
+:root{--app-max-width:1400px}.content-page{margin-top:0}#wrapper,.content-page{overflow:initial!important}.content-page>.content{margin-top:15px}.content-page>.content.with-user{margin-top:70px}.user-houses-stats{position:-webkit-sticky;position:sticky;top:150px}.navbar-custom{top:0}body #wrapper{box-shadow:none;margin:0 auto;max-width:var(--app-max-width)}body[data-layout-mode=horizontal] .footer,body[data-layout-mode=horizontal] .navbar-custom,body[data-layout-mode=horizontal] .topnav{max-width:100%}@media (min-width:1200px){body[data-layout-mode=horizontal] .container-fluid{margin:0 auto;max-width:var(--app-max-width)}}.paginator-start .pagination{justify-content:start}.paginator-center .pagination{justify-content:center}.paginator-end .pagination{justify-content:end}.screen-lock{background-color:#333;height:100%;opacity:.7;top:0;z-index:1000000}.screen-lock,.screen-lock-text{left:0;position:fixed;width:100%}.screen-lock-text{color:#fff;font-size:28px;text-align:center;top:49%;z-index:1000001}.bg-sky{background:#4b79a1;background:linear-gradient(0deg,#283e51,#0a2342);background:-olinear-gradient(to top,#283e51,#0a2342)}.bg-sky:before{background:url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat 50%;bottom:0;content:"";display:block;height:100%;left:0;position:absolute;right:0;top:0;width:100%}.star-on{-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:forwards;animation-fill-mode:forwards;-webkit-animation-name:starAnimation;animation-name:starAnimation;filter:drop-shadow(0 0 0 yellow)}@-webkit-keyframes starAnimation{0%{color:#6c757d;filter:drop-shadow(0 0 0 yellow)}to{color:gold;filter:drop-shadow(0 0 5px yellow)}}@keyframes starAnimation{0%{color:#6c757d;filter:drop-shadow(0 0 0 yellow)}to{color:gold;filter:drop-shadow(0 0 5px yellow)}}.stars-content{height:110px;position:absolute;top:10px;width:290px}.stars-content .star-1{font-size:40px;left:19px;position:absolute;top:45px}.stars-content .star-2{font-size:60px;left:112px;position:absolute;top:5px}.stars-content .star-3{font-size:40px;left:231px;position:absolute;top:45px}.buyHouse-name{background:rgba(0,0,0,.89);bottom:0;box-sizing:border-box;color:#fff;font-size:2rem;left:0;padding:.5rem;position:absolute;text-align:center;width:100%;z-index:11}#myModal .card-body,#myModal .modal-body{padding:0}#buyHouse-image{margin-top:100px}[v-cloak]{display:none}.btn-close{filter:invert(1);position:absolute;right:10px;top:10px;z-index:100}.product-box{opacity:1;transition:opacity 1s ease-in-out}.building-hidden{opacity:0}#myModal .modal-content{box-shadow:0 22px 70px 4px rgba(0,0,0,.56)}#myModal .bg-sky,#myModal .modal-content{background-color:transparent;border-radius:10px}#myModal #buyHouse-name{border-bottom-left-radius:10px;border-bottom-right-radius:10px}
